# claude-code-toolkit

./: .gitattributes  .gitignore  README.md  claude-md-audit-DESIGN.md  memory-audit-DESIGN.md  subagent-orchestration-DESIGN.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
claude-md-curator/: hook.py  test_hook.py
context-alert/: hook.py  test_hook.py
coverage-nudge/: hook.py  test_hook.py
enforcement-nudge/: hook.py  test_hook.py
failure-modes/: catalog.md  hook.py  rules.json  test_hook.py
hooks/: hooks.json
memory-curator/: hook.py  test_hook.py
skills/claude-md-audit/: SKILL.md
skills/coverage-audit/: SKILL.md  checklist.py  test_checklist.py
skills/design-note/: SKILL.md
skills/failure-scan/: SKILL.md
skills/handoff/: SKILL.md  template.md
skills/memory-audit/: SKILL.md
skills/scaffold-mcp/examples/book-tracker/: .coverage  .gitignore  CLAUDE.md  COVERAGE-AUDIT.md  README.md  preflight.sh  pyproject.toml  requirements.txt  setup.sh
skills/scaffold-mcp/examples/book-tracker/.github/workflows/: test.yml
skills/scaffold-mcp/examples/book-tracker/src/booktracker/: __init__.py  cli.py  core.py  exports.py  models.py  server.py  store.py
skills/scaffold-mcp/examples/book-tracker/src/booktracker/data/: booktracker.seed.json
skills/scaffold-mcp/examples/book-tracker/tests/: conftest.py  test_cli.py  test_core.py  test_readme.py  test_server_imports.py  test_server_tools.py
skills/scaffold-mcp/examples/book-tracker/tests/fixtures/: goodreads_sample.csv
subagent-nudge/: hook.py  test_hook.py
(+28 files in other folders)
